--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -1,13 +1,14 @@
 .background{
   background-image: linear-gradient(to bottom, mediumpurple, pink, white);
-  width: 100vw;
+  max-width: 100vw;
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   overflow-x: hidden;
   flex-direction: column;
   align-items: center;
 }
+
 
 
 #stars {
@@ -137,7 +138,7 @@
 }
 
 .amethyst {
-  width: 90%;
+  width: 100%;
   height: auto;
   filter: drop-shadow(0 0 8vmin mediumpurple);
   z-index: 1;
@@ -169,9 +170,9 @@
 
 .top {
   display: flex;
-  height: 100%;
-  width: 100%;
-  position: absolute;
+  overflow: hidden;
+  height: 99vh;
+  width: 100vw;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -241,9 +242,30 @@
   }
 }
 
+
+
 .stars-animation{
   width:100%;
-  height:100%;
+  height:inherit;
 }
 
+.test {
+}
+
+.main-page{
+  height: 100vh;
+  width: 100%;
+}
+
+::-webkit-scrollbar-track{
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: lightpink;
+}
+
+* {
+  scrollbar-color: lightpink transparent;
+}
 
