--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -257,7 +257,43 @@
   height:inherit;
 }
 
-.test {
+.info-points {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.point-right{
+  align-items: center;
+  width: 30%;
+  background-image: linear-gradient(to left, transparent, white);
+  height: 33vh;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.point-left{
+  @extend .point-right;
+  justify-content: flex-end;
+  margin-left: auto;
+  background-image: linear-gradient(to right, transparent, white);
+}
+
+.point-text{
+  color: indigo;
+  padding: 1vmin;
+  font-style: italic;
+  font-size: 2vw;
+  font-family: "Bodoni MT Poster Compressed";
+
+}
+
+.point-img{
+  width:50px;
+  height: 50px;
+  background-color: purple;
 }
 
 .main-page{
